# AprilTagsDetector

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/apriltagshandler2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/apriltag/: CMakeLists.txt  apriltag_jni.c
app/src/main/java/com/example/apriltagshandler2/: AprilTagDetection.java  AprilTagNative.java  AprilTagNative2.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/apriltagshandler2/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
